<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vda.home.qstquizz.MainActivity">

    <Button
        android:id="@+id/starttest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:text="@string/starttest" />

    <Button
        android:id="@+id/baseselect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/starttest"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/baseselect" />

    <TextView
        android:id="@+id/noFileSelectedMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/baseselect"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#ff0000"
        android:gravity="center"
        android:text="@string/noFileSelectedMsg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/settings_text"
        />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/exit" />

</RelativeLayout>
